[project]
name = "can-chat-ai"
version = "0.1.0"
description = "Canadian AI Chatbot"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=1.5.10",
    "cohere>=5.15.0",
    "coloredlogs>=15.0.1",
    "duckduckgo-search>=8.0.2",
    "openai>=1.97.0",
    "sqlalchemy>=2.0.41",
]

[project.optional-dependencies]
dev = [
    "ipdb>=0.13.0",
]

