[project]
name = "can-chat-ai"
version = "0.1.0"
description = "Canadian AI Chatbot"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=1.5.10",
    "authlib>=1.6.1",
    "cohere>=5.15.0",
    "coloredlogs>=15.0.1",
    "duckduckgo-search>=8.0.2",
    "openai>=1.97.0",
    "psycopg[binary]>=3.2.9",
    "python-decouple>=3.8",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.42.0",
    "Authlib>=1.3.2"
]

[project.optional-dependencies]
dev = [
    "ipdb>=0.13.0",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
]

